--- a/src/global.css
+++ b/src/global.css
@@ -9,7 +9,7 @@
 
 body {
     font: 400 14px Roboto, sans-serif;
-    background: #f0f0f5;
+    background: rgb(255, 74, 89);
     -webkit-font-smoothing: antialiased;    
 }
 
@@ -66,7 +66,7 @@ form textarea {
     display: flex;
     align-items: center;
     margin-top: 40px;
-    color: #41414d;
+    color: #fff;
     font-size: 18px;
     text-decoration: none;
     font-weight: 500;
@@ -80,3 +80,40 @@ form textarea {
 .back-link:hover {
     opacity: 0.8;
 }
+.back-link2 {
+    display: flex;
+    align-items: center;
+    margin-top: 40px;
+    color: #000;
+    font-size: 18px;
+    text-decoration: none;
+    font-weight: 500;
+    transition: opacity 0.2s;
+}
+
+.back-link2 svg {
+    margin-right: 8px;
+}
+
+.back-link2:hover {
+    opacity: 0.8;
+}
+.back-link2 {
+    display: flex;
+    align-items: center;
+    margin-top: 40px;
+    color: #000;
+    font-size: 18px;
+    text-decoration: none;
+    font-weight: 500;
+    transition: opacity 0.2s;
+}
+
+.back-link2 svg {
+    margin-right: 8px;
+}
+
+.back-link2:hover {
+    opacity: 0.8;
+}
+
