--- a/src/pages/Logon/styles.css
+++ b/src/pages/Logon/styles.css
@@ -5,14 +5,25 @@
     margin: 0 auto;
 
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: space-between;
 }
 
+.logon-container .img1 {
+    margin-top:60px;
+}
+
+.container-logo{
+    display: flex;
+    flex-direction: row;
+    margin-bottom: 150px;
+}
+
 .logon-container section.form {
     width: 100%;
-    max-width: 350px;
-    margin-right: 30px;
+    max-width: 500px;
+    margin-right: 100px;
 }
 
 .logon-container section.form form{
@@ -20,6 +31,64 @@
 }
 
 .logon-container section.form h1 {
-    font-size: 32px;
+    font-size: 25px;
     margin-bottom: 32px;
+    color: #fff;
+}
+
+.form-input {
+    margin-bottom: 20px;
+}
+
+.input-group1 {
+    display: flex;
+}
+
+.input-group1 link + button{
+    margin-left: 8px;
+}
+
+.input-group1 .button1 {
+    max-width: 100px;
+    left: 200px;
+}
+
+.button1 {
+    width: 100%;
+    height: 60px;
+    background: #d3203e;
+    border: 0;
+    border-radius: 8px;
+    color: #fff;
+    font-weight: 700;
+    margin-top: 16px;
+    display: inline-block;
+    text-align: center;
+    text-decoration: none;
+    font-size: 18px;
+    line-height: 60px;
+    transition: filter 0.2s;
+}
+
+.button1:hover {
+    filter: brightness(90%);
+}
+
+.back-link1 {
+    display: flex;
+    align-items: center;
+    margin-top: 40px;
+    color: #fff;
+    font-size: 18px;
+    text-decoration: none;
+    font-weight: 500;
+    transition: opacity 0.2s;
+    margin-right: 217px;
+}
+
+.back-link1 svg {
+    margin-right: 8px;
+}
+.logoAmericanas {
+    margin-top: 1px;
 }
